crates/squealy-macros/tests/compile_fail/conflicting_primary_key_nullable.stderr
error: column `id` cannot be both `primary_key` and `nullable`
 --> tests/compile_fail/conflicting_primary_key_nullable.rs:6:5
  |
6 |     id: C::Type<'scope, i32>,
  |     ^^
